--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 server.port=8010
+
+#配置数据库链接等数据源
+spring.datasource.name=dianpingdb
+spring.datasource.url=jdbc:mysql://118.24.38.184:3306/dianpingdb?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=yinhaixiang0410sean
+
+#使用druid做链接池管理
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+
+# 日志
+logging.level.root=info
+logging.level.com.sean.dianping.mapper=debug
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level[%t] %logger{15}.%M - %msg%n
+
+
