--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
       <artifactId>velocity-engine-core</artifactId>
       <version>2.1</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
 
   </dependencies>
 
