--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ logging.level.com.sean.dianping.mapper=debug
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level[%t] %logger{15}.%M - %msg%n
 
 
+#add-mappings=true表示如果所有的controller都没有命中，则使用默认的静态资源处理器做匹配
+spring.resources.add-mappings=false
+spring.mvc.throw-exception-if-no-handler-found=true
