--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,18 @@ spring.datasource.password=yinhaixiang0410sean
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-
 # 日志
 logging.level.root=info
 logging.level.com.sean.dianping.mapper=debug
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level[%t] %logger{15}.%M - %msg%n
 
-
 #add-mappings=true表示如果所有的controller都没有命中，则使用默认的静态资源处理器做匹配
-spring.resources.add-mappings=false
+spring.resources.add-mappings=true
 spring.mvc.throw-exception-if-no-handler-found=true
+
+#接入前端静态资源页面
+spring.mvc.static-path-pattern=/static/**
+
+#thymeleaf相关的配置
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
