--- a/src/main/resources/mybatis-plus.properties
+++ b/src/main/resources/mybatis-plus.properties
@@ -12,4 +12,4 @@ password=yinhaixiang0410sean
 #自定义包路径
 parent=com.sean.dianping
 #数据库表名(此处切不可为空，如果为空，则默认读取数据库的所有表名)
-tableName=user
+tableName=shop
